# calib_mono_cam_manual

./: .gitignore  CMakeLists.txt  Readme.md  test_lie.cpp  test_numeric.cpp  test_opt_camK.cpp  test_quat.cpp
data/: camera_poses_lie.txt
inc/: camera_calib.hpp  pose_local_parameteriztion.hpp  so3_local_param.hpp
src/: camera_calib.cpp  use_lie_parameterization.cpp  use_numeric.cpp  use_quat_parameterization.cpp
utility/: CMakeLists.txt  ultility.cpp  ultility.hpp
visualize/: visualize_cam_poses.py
